syntax = "proto3";

package cache_server_service;
option go_package = ".";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";

// Here is the overall greeting service definition where we define all our endpoints
service CacheServer {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/test"
      body: "*"
    };
  }
  rpc AddKeyValue (AddKeyValueRequest) returns (AddKeyValueReply) {
    option (google.api.http) = {
      post: "/"
      body: "*"
    };
  }
  rpc GetValueByKey (GetValueRequest) returns (GetValueReply) {
      option (google.api.http) = {
          get: "/{key}",
      };
    }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message AddKeyValueRequest{
  string key = 1;
  string value = 2;
}

message AddKeyValueReply {
  string message = 1;
}

message GetValueRequest{
  string key = 1;
  int64 interControl = 2;
}

message GetValueReply {
  string key = 1;
  string value = 2;
  string isExist = 3;
}
